// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > review > getReviews > rejects missing active parameter 1`] = `
{
  "error": {
    "context": {
      "errors": [
        {
          "code": "invalid_type",
          "expected": "boolean",
          "message": "Required",
          "path": [
            "query",
            "active",
          ],
          "received": "undefined",
        },
      ],
    },
    "message": "Required",
    "name": "Error",
  },
}
`;

exports[`routes > review > getReviews > rejects missing value for active parameter 1`] = `
{
  "error": {
    "context": {
      "errors": [
        {
          "code": "invalid_type",
          "expected": "boolean",
          "message": "Required",
          "path": [
            "query",
            "active",
          ],
          "received": "undefined",
        },
      ],
    },
    "message": "Required",
    "name": "Error",
  },
}
`;

exports[`routes > review > getReviews > returns only active reviews 1`] = `
{
  "reviews": [
    {
      "createdAt": "2023-08-13T00:00:00.000Z",
      "kind": "release",
      "modelId": "abc",
      "responses": [],
      "role": "msro",
      "semver": "3.0.3",
      "updatedAt": "2023-08-14T00:00:00.000Z",
    },
  ],
}
`;

exports[`routes > review > getReviews > returns only active reviews for the specified model 1`] = `
{
  "reviews": [
    {
      "createdAt": "2023-08-13T00:00:00.000Z",
      "kind": "release",
      "modelId": "abc",
      "responses": [],
      "role": "msro",
      "semver": "3.0.3",
      "updatedAt": "2023-08-14T00:00:00.000Z",
    },
  ],
}
`;

exports[`routes > review > getReviews > returns only active reviews for the specified model 2`] = `
[
  [
    {
      "dn": "user",
    },
    true,
    "abc",
    undefined,
    undefined,
    undefined,
  ],
]
`;

exports[`routes > review > getReviews > returns only inactive reviews 1`] = `
{
  "reviews": [
    {
      "createdAt": "2023-08-13T00:00:00.000Z",
      "kind": "release",
      "modelId": "abc",
      "responses": [
        {
          "comment": "looks amazing!",
          "decision": "approve",
          "user": "user",
        },
      ],
      "role": "msro",
      "semver": "3.0.2",
      "updatedAt": "2023-08-14T00:00:00.000Z",
    },
  ],
}
`;
